--- a/contact.html
+++ b/contact.html
@@ -99,6 +99,8 @@
                         </div>
                         <div class="info_item">
                             <i class="lnr lnr-envelope"></i>
+                        <h6><a href="#">dhanibaharzah@gmail.com</a></h6>
+                        <p>Please send your feedback!</p>
                             
                         </div>
                     </div>
@@ -185,7 +187,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <!--gmaps Js-->
     <script src="js/gmaps.min.js"></script>
     <script src="js/theme.js"></script>
-    
+    <!--- gmaps key access-->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCjCGmQ0Uq4exrzdcL6rvxywDDOvfAu6eE"></script>
 </body>
 
 </html>
