--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<div class="container">
 					<style>
 						div.a {
-							font-size: 15px;
+							font-size: 200%;
 							}	
 					</style>
 					<!-- Brand and toggle get grouped for better mobile display -->
