--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
-					<a class="a" href="index.html"><b>D H A N I</b> B A H A R Z A H</a>
+					<style>
+					 .newfont {
+						 font-size: 32px;
+						 color: #854fee;
+					 }
+					 .boldy {
+						 font-weight: bold;
+					 }
+					</style>
+					<a class="newfont" href="index.html"><span class="boldy">D H A N I</span>  B A H A R Z A H</a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
