--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Long Haul
+title: Dhani Baharzah
 ---
 
 <div class="home" id="home">
-  <h1 class="pageTitle">Recent Posts</h1>
+  <h1 class="pageTitle">My Recent Posts</h1>
   <ul class="posts noList">
     {% for post in paginator.posts %}
       <li>
