--- a/index.html
+++ b/index.html
@@ -584,7 +584,9 @@
         <div class="section-header">          
           <h2 class="section-title">Recent Blog</h2>
           <hr class="lines">
-          <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, dignissimos! <br> Lorem ipsum dolor sit amet, consectetur.</p>
+          <p class="section-subtitle">
+            These posts below are posted in my Tumblr. <br> The contents are about everything that matter to me. It's not just about work, it's about my life.
+          </p>
         </div>
         <div class="row">
           <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 blog-item">
