--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <a class="page-scroll" href="#features">Features</a>
               </li>-->
               <li class="nav-item">
-                <a class="nav-link page-scroll" href="#portfolios">Works</a>
+                <a class="nav-link page-scroll" href="#portfolios">Work</a>
               </li>
               <!--<li>
                 <a class="page-scroll" href="#pricing">Pricing</a>
