--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@
           </div>
           <div class="col-lg-6 col-sm-6 col-xs-12">
             <div class="copyright">
-              <p>All copyrights reserved &copy; 2018 - Developed by Dhani and Designed using <a rel="nofollow" href="https://uideck.com">UIdeck</a></p>
+              <p>All copyrights reserved &copy; 2020 - Developed by Dhani and Designed by <a rel="nofollow" href="https://uideck.com">UIdeck</a></p>
             </div>
           </div>  
         </div>
